updated the dockerfile