@@ -1,7 +1,11 @@
 FROM eclipse-temurin:17-jre-alpine
-EXPOSE 8080
+EXPOSE 8081
 ARG JAR_FILE=target/*.jar
 RUN addgroup -S pipeline && adduser -S k8s-pipeline -G pipeline
 COPY ${JAR_FILE} /home/k8s-pipeline/app.jar
 USER k8s-pipeline
-ENTRYPOINT ["java","-jar","/home/k8s-pipeline/app.jar"]
+ENTRYPOINT ["java", \
+  "--add-opens=java.base/java.io=ALL-UNNAMED", \
+  "--add-opens=java.base/java.lang=ALL-UNNAMED", \
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED", \
+  "-jar", "/home/k8s-pipeline/app.jar"]
